--- a/glassdoor/static/css/style.css
+++ b/glassdoor/static/css/style.css
@@ -3,21 +3,57 @@ h1 {
     text-align: center;
     padding: 10px;
 }
-#search {
-    margin: 0 auto;
-    display: block;
+
+input {
+    all: unset;
+    font: 16px system-ui;
+    color: black;
+    height: 100%;
+    padding: 6px 10px;
+    text-align: center;
+    font-size: 16px;
+    float: left;
+    width: 70%;
+    background: #f1f1f1;
+}
+button{
+    background-color: gray;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    align: middle;
+    border-radius: 8px;
+    transition-duration: 0.4s;
+    float: right;
+    width: 20%;
+    border: 1px solid grey;
+    border-left: none;
+    cursor: pointer;
+}
+html, body {
+    height: 80%;
+}
+html {
+    display: table;
+    margin: auto;
 }
 
-button[type="submit"] {
-    border-radius: 2px;
-    background: #f2f2f2;
-    border: 1px solid #f2f2f2;
-    color: #757575;
-    cursor: default;
-    font-size: 14px;
-    font-weight: bold;
-    width: 100px;
-    padding: 0 16px;
-    height:36px;
+body {
+    display: table-cell;
+    vertical-align: middle;
+    font-family: "Product Sans", sans-serif
 }
 
+button:hover{
+    background-color: white; 
+    color: gray;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+button:active {
+    background-color: white; 
+    color: gray;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  }
