Connected the front page and search functionality.
Created a new directory FrontEndWebpages to contain the frontend.

Made FrontPage.py and edited index to show search results

--- a/FrontendWebpages/static/css/style.css
+++ b/FrontendWebpages/static/css/style.css
@@ -16,6 +16,18 @@ input {
     width: 70%;
     background: #f1f1f1;
 }
+
+select {
+    all: unset;
+    font: 16px system-ui;
+    color: black;
+    padding: 6px 10px;
+    text-align: center;
+    font-size: 16px;
+    float: left;
+    width: 70%;
+}
+
 button{
     background-color: gray;
     color: white;
