--- a/FrontendWebpages/templates/index.html
+++ b/FrontendWebpages/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
@@ -31,9 +31,18 @@
     
    <form method="post">
     <div class="form-group">
-        <input type="text" name="title" id="search"
+        <input type="search" list="searchresults" name="title" id="search"
                placeholder="Input Company Name" class="form-control"
-               value="{{ request.form['title'] }}"></input>
+               autocomplete="off" value="{{ request.form['title'] }}">
+        {% if results|length >= 1 %}
+            <datalist id="searchresults">
+                {% for result in results %}
+                    <option value="{{result.company_name}}">
+                        {{ result.company_number }}
+                    </option>
+                {% endfor %}
+            </datalist>
+        {% endif %}
     </div>
     <div class="form-group">
         <button type="submit" class="btn btn-primary">Submit</button>
