--- a/FrontendWebpages/static/css/style.css
+++ b/FrontendWebpages/static/css/style.css
@@ -44,6 +44,7 @@ button{
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    margin-top: 5px;
     align: middle;
     border-radius: 8px;
     transition-duration: 0.4s;
