--- a/FrontendWebpages/templates/searchpage.html
+++ b/FrontendWebpages/templates/searchpage.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <title>Automatic Entrepreneur</title>
 </head>
 <body>
@@ -29,21 +30,21 @@
     <span style="color:#DB4437">u</span>
     <span style="color:#4285F4">r</span></h1>
     
-   <form method="post">
+   <form id="search_form" method="post">
     <div class="form-group">
         <input type="search" list="search_results" name="title" id="search"
                placeholder="Input Company Name" class="form-control"
                autocomplete="off" value="{{ request.form['title'] }}">
             <datalist id="search_results">
                 {% for result in results %}
-                    <option value="{{result.company_name}}">
+                    <option id="{{result.company_number}}" value="{{result.company_name}}">
                         {{ result.company_number }}
                     </option>
                 {% endfor %}
             </datalist>
     </div>
     <div class="form-group">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button style="margin-bottom:3cm;" type="submit" class="btn btn-primary">Search</button>
     </div>
     </form>
 </body>
