--- a/FrontendWebpages/templates/searchpage.html
+++ b/FrontendWebpages/templates/searchpage.html
@@ -9,46 +9,46 @@
 </head>
 <body>
    <h1>
-    <span style="color:#4285F4">A</span>
-    <span style="color:#DB4437">u</span>
-    <span style="color:#F4B400">t</span>
-    <span style="color:#0F9D58">o</span>
-    <span style="color:#DB4437">m</span>
-    <span style="color:#4285F4">a</span>
-    <span style="color:#F4B400">t</span>
-    <span style="color:#0F9D58">i</span>
-    <span style="color:#DB4437">c</span>
-    <span style="color:#F4B400">E</span>
-    <span style="color:#DB4437">n</span>
-    <span style="color:#F4B400">t</span>
-    <span style="color:#4285F4">r</span>
-    <span style="color:#F4B400">e</span>
-    <span style="color:#0F9D58">p</span>
-    <span style="color:#DB4437">r</span>
-    <span style="color:#F4B400">e</span>
-    <span style="color:#0F9D58">n</span>
-    <span style="color:#F4B400">e</span>
-    <span style="color:#DB4437">u</span>
-    <span style="color:#4285F4">r</span></h1>
-    
+       <span style="color:#4285F4">A</span>
+       <span style="color:#DB4437">u</span>
+       <span style="color:#F4B400">t</span>
+       <span style="color:#0F9D58">o</span>
+       <span style="color:#DB4437">m</span>
+       <span style="color:#4285F4">a</span>
+       <span style="color:#F4B400">t</span>
+       <span style="color:#0F9D58">i</span>
+       <span style="color:#DB4437">c</span>
+       <span style="color:#F4B400">E</span>
+       <span style="color:#DB4437">n</span>
+       <span style="color:#F4B400">t</span>
+       <span style="color:#4285F4">r</span>
+       <span style="color:#F4B400">e</span>
+       <span style="color:#0F9D58">p</span>
+       <span style="color:#DB4437">r</span>
+       <span style="color:#F4B400">e</span>
+       <span style="color:#0F9D58">n</span>
+       <span style="color:#F4B400">e</span>
+       <span style="color:#DB4437">u</span>
+       <span style="color:#4285F4">r</span></h1>
+
    <form id="search_form" method="post">
-    <div class="form-group">
-        <input type="search" list="search_results" name="title" id="search"
+       <div class="form-group">
+           <input type="search" list="search_results" name="title" id="search"
                placeholder="Input Company Name" class="form-control"
                autocomplete="off" value="{{ request.form['title'] }}">
-            <datalist id="search_results">
+           <datalist id="search_results">
                 {% for result in results %}
                     <option id="{{result.company_number}}" value="{{result.company_name}}">
                         {{ result.company_number }}
                     </option>
                 {% endfor %}
-            </datalist>
-    </div>
-    <div class="form-group">
-        <button style="margin-bottom:3cm;" type="submit" class="btn btn-primary">Search</button>
-    </div>
-    </form>
-   <button style="margin-bottom:3cm;" id="reportBtn" class="btn btn-primary">Generate Report</button>
+           </datalist>
+       </div>
+       <div class="form-group">
+           <button style="margin-bottom:3cm;" type="submit" class="btn btn-primary">Search</button>
+       </div>
+   </form>
+   <button style="margin-bottom:3cm;" type="button" id="reportBtn" class="btn btn-primary">Report</button>
    <script type="text/javascript">
         function generateReport(companyName) {
             $.ajax({
