Changed the 'report' button name to 'generate report'

--- a/FrontendWebpages/templates/searchpage.html
+++ b/FrontendWebpages/templates/searchpage.html
@@ -48,7 +48,7 @@
            <button style="margin-bottom:3cm;" type="submit" class="btn btn-primary">Search</button>
        </div>
    </form>
-   <button style="margin-bottom:3cm;" type="button" id="reportBtn" class="btn btn-primary">Report</button>
+   <button style="margin-bottom:3cm;" type="button" id="reportBtn" class="btn btn-primary">Generate Report</button>
    <script type="text/javascript">
         function generateReport(companyName) {
             $.ajax({
