--- a/FrontendWebpages/static/css/style.css
+++ b/FrontendWebpages/static/css/style.css
@@ -54,6 +54,28 @@ button{
     border-left: none;
     cursor: pointer;
 }
+
+.button2{
+    position: absolute;
+    top: 45%;
+    left: 40%;
+    margin: auto;
+    background-color: gray;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 5px;
+    align: middle;
+    border-radius: 8px;
+    transition-duration: 0.4s;
+    float: right;
+    width: 20%;
+    border: 1px solid grey;
+    border-left: none;
+    cursor: pointer;
+}
 html, body {
     height: 80%;
 }
